[tool.poetry]
name = "BattleShip"
version = "0.1.0"
description = ""
authors = ["shebeli <shervinsaeedi78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
